# python-regmap

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
doc/sources/: i2c.md
examples/: arty_eth_streamer.py  icebreaker.py  icestick.py  icestick_lm75.py  lm75.py
regmap/core/: i2c.py  i2c_sequencer.py  models.py  onewire.py  spi.py
regmap/devices/: ads1120.py  ads131.py  eeprom.py  gpio.py  temp.py  tmp182x.py
regmap/test/: test_core_i2c.py  test_core_i2c_sequencer.py  test_core_onewire.py  test_core_spi.py  test_devices_ads1120.py  test_devices_eeprom.py  utils.py
