[project]
name = "regmap"
version = "0.1.0"
description = "A gateware-based I2C bus and device control library build on Migen"
# license = "MIT"
authors = [
     { name = "Charles-Henri Mousset", email = "ch.mousset@gmail.com" },
]
# repository = "https://github.com/chmousset/python-regmap"
keywords = ["FPGA", "Gateware", "I2C", "SMB"]

[tool.poetry]
# ...
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: System :: Hardware"
]
packages = ["regmap"]
include = []

[tool.setuptools]
packages = ["regmap"]

[build-system]
requires = ["setuptools ~= 64.0", "cython ~= 0.29.0"]

[tool.poetry.dependencies]
migen = "^0.9.2"

# For Verilator
importlib_resources = "^5.12"
cmake = "^3.26"

# For doc generation
sphinx = {version = "^6.2.1", optional = true }
sphinx-rtd-theme = {version = "^1.2.1", optional = true }
recommonmark = {version = "^0.7.1", optional = true }
sphinx_autodoc_typehints = {version = "^1.23.0", optional = true }
sphinxcontrib_wavedrom = {version = "^3.0.4", optional = true }
sphinxcontrib_svgbob = {version = "^0.2.1", optional = true }

# For dev

[tool.poetry.extras]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "recommonmark",
    "sphinx_autodoc_typehints",
    "sphinxcontrib_wavedrom",
    "sphinxcontrib_svgbob",
]
