[project]
name = "regmap"
version = "0.1.0"
description = "A gateware-based I2C bus and device control library build on Migen"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["FPGA", "Gateware", "I2C", "SMB"]
# license = "MIT"
authors = [
     { name = "Charles-Henri Mousset", email = "ch.mousset@gmail.com" },
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: System :: Hardware"
]

[project.urls]
"Homepage" = "https://github.com/chmousset/python-regmap"

[tool.poetry]
packages = [
    { include = "regmap" },
]

[tool.setuptools]
py-modules = ["regmap"]

[dependencies]
# migen = "^0.9.2"
# litex = "^2023.12"
# For doc generation
sphinx = {version = "^6.2.1", optional = true }
sphinx-rtd-theme = {version = "^1.2.1", optional = true }
recommonmark = {version = "^0.7.1", optional = true }
sphinx_autodoc_typehints = {version = "^1.23.0", optional = true }
sphinxcontrib_wavedrom = {version = "^3.0.4", optional = true }
sphinxcontrib_svgbob = {version = "^0.2.1", optional = true }

[tool.poetry.extras]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "recommonmark",
    "sphinx_autodoc_typehints",
    "sphinxcontrib_wavedrom",
    "sphinxcontrib_svgbob",
]
dev = []
