[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "regmap"
version = "0.1.0"
description = "A gateware-based I2C bus and device control library built on Migen"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["FPGA", "Gateware", "I2C", "SMB"]
authors = [
    { name = "Charles-Henri Mousset", email = "ch.mousset@gmail.com" },
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: System :: Hardware"
]
license = "BSD-2-Clause"

[project.urls]
Homepage = "https://github.com/chmousset/python-regmap"

[project.optional-dependencies]
doc = [
    "sphinx>=6.2.1",
    "sphinx-rtd-theme>=1.2.1",
    "recommonmark>=0.7.1",
    "sphinx_autodoc_typehints>=1.23.0",
    "sphinxcontrib_wavedrom>=3.0.4",
    "sphinxcontrib_svgbob>=0.2.1"
]

[tool.setuptools.packages.find]
include = ["regmap"]
